generated/CidlParser.cpp

// Generated from Grammar/Cidl.g4 by ANTLR 4.11.1


#include "CidlListener.h"

#include "CidlParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CidlParserStaticData final {
  CidlParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CidlParserStaticData(const CidlParserStaticData&) = delete;
  CidlParserStaticData(CidlParserStaticData&&) = delete;
  CidlParserStaticData& operator=(const CidlParserStaticData&) = delete;
  CidlParserStaticData& operator=(CidlParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cidlParserOnceFlag;
CidlParserStaticData *cidlParserStaticData = nullptr;

void cidlParserInitialize() {
  assert(cidlParserStaticData == nullptr);
  auto staticData = std::make_unique<CidlParserStaticData>(
    std::vector<std::string>{
      "module", "attribute", "attribute_list", "interfaceDefinition", "structField", 
      "structDefinition", "enumDefinition", "local_type", "imported_type_module", 
      "imported_type_name", "imported_type", "local_or_imported_type", "reference_type_name", 
      "array_type", "method_name", "expression", "unary_expression", "argument", 
      "argument_list", "method_parameter", "method_parameter_list", "method_return_type", 
      "method", "enumField", "interfaceInheritanceList", "numeric_literal", 
      "enum_field_value", "primitive", "integer_primitive", "float_literal"
    },
    std::vector<std::string>{
      "", "','", "'.'", "'&'", "'[]'", "'='", "'double'", "'float'", "'void'", 
      "'IUnknown'", "'bool'", "'string'", "'Guid'", "'-'", "'+'", "", "", 
      "", "", "", "'uint8'", "'uint16'", "'uint32'", "'uint64'", "'int8'", 
      "'int16'", "'int32'", "'int64'", "'interface'", "'struct'", "'enum'", 
      "'import'", "'['", "", "", "", "']'", "", "", "", "'('", "')'", "'{'", 
      "'}'", "';'", "':'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "MINUS", "PLUS", 
      "COMMENT", "LINE_COMMENT", "INTEGER_LITERAL", "HEX_LITERAL", "ID_INTEGER_PRIMITIVE", 
      "ID_UINT8", "ID_UINT16", "ID_UINT32", "ID_UINT64", "ID_INT8", "ID_INT16", 
      "ID_INT32", "ID_INT64", "ID_INTERFACE", "ID_STRUCT", "ID_ENUM", "ID_IMPORT", 
      "LEFT_SQUARE_BRACKET", "FLOAT", "FLOAT_SUFFIX", "STRING_LITERAL", 
      "RIGHT_SQUARE_BRACKET", "ID", "WS", "INTEGER", "LEFT_BRACKET", "RIGHT_BRACKET", 
      "LCURLY", "RCURLY", "SEMICOLON", "COLON"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cidlParserStaticData = staticData.release();
}

}

CidlParser::CidlParser(TokenStream *input) : CidlParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CidlParser::CidlParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CidlParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cidlParserStaticData->atn, cidlParserStaticData->decisionToDFA, cidlParserStaticData->sharedContextCache, options);
}

CidlParser::~CidlParser() {
  delete _interpreter;
}

const atn::ATN& CidlParser::getATN() const {
  return *cidlParserStaticData->atn;
}

std::string CidlParser::getGrammarFileName() const {
  return "Cidl.g4";
}

const std::vector<std::string>& CidlParser::getRuleNames() const {
  return cidlParserStaticData->ruleNames;
}

const dfa::Vocabulary& CidlParser::getVocabulary() const {
  return cidlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CidlParser::getSerializedATN() const {
  return cidlParserStaticData->serializedATN;
}


//----------------- ModuleContext ------------------------------------------------------------------

CidlParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CidlParser::ModuleContext::EOF() {
  return getToken(CidlParser::EOF, 0);
}

std::vector<CidlParser::InterfaceDefinitionContext *> CidlParser::ModuleContext::interfaceDefinition() {
  return getRuleContexts<CidlParser::InterfaceDefinitionContext>();
}

CidlParser::InterfaceDefinitionContext* CidlParser::ModuleContext::interfaceDefinition(size_t i) {
  return getRuleContext<CidlParser::InterfaceDefinitionContext>(i);
}

std::vector<CidlParser::StructDefinitionContext *> CidlParser::ModuleContext::structDefinition() {
  return getRuleContexts<CidlParser::StructDefinitionContext>();
}

CidlParser::StructDefinitionContext* CidlParser::ModuleContext::structDefinition(size_t i) {
  return getRuleContext<CidlParser::StructDefinitionContext>(i);
}

std::vector<CidlParser::EnumDefinitionContext *> CidlParser::ModuleContext::enumDefinition() {
  return getRuleContexts<CidlParser::EnumDefinitionContext>();
}

CidlParser::EnumDefinitionContext* CidlParser::ModuleContext::enumDefinition(size_t i) {
  return getRuleContext<CidlParser::EnumDefinitionContext>(i);
}


size_t CidlParser::ModuleContext::getRuleIndex() const {
  return CidlParser::RuleModule;
}

void CidlParser::ModuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModule(this);
}

void CidlParser::ModuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModule(this);
}

CidlParser::ModuleContext* CidlParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, CidlParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);

      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(66);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 5905580032) != 0) {
        setState(64);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case CidlParser::LEFT_SQUARE_BRACKET: {
            setState(61);
            interfaceDefinition();
            break;
          }

          case CidlParser::ID_STRUCT: {
            setState(62);
            structDefinition();
            break;
          }

          case CidlParser::ID_ENUM: {
            setState(63);
            enumDefinition();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(68);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(69);
      match(CidlParser::EOF);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

CidlParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CidlParser::AttributeContext::LEFT_SQUARE_BRACKET() {
  return getToken(CidlParser::LEFT_SQUARE_BRACKET, 0);
}

CidlParser::Local_typeContext* CidlParser::AttributeContext::local_type() {
  return getRuleContext<CidlParser::Local_typeContext>(0);
}

tree::TerminalNode* CidlParser::AttributeContext::RIGHT_SQUARE_BRACKET() {
  return getToken(CidlParser::RIGHT_SQUARE_BRACKET, 0);
}

tree::TerminalNode* CidlParser::AttributeContext::LEFT_BRACKET() {
  return getToken(CidlParser::LEFT_BRACKET, 0);
}

CidlParser::Argument_listContext* CidlParser::AttributeContext::argument_list() {
  return getRuleContext<CidlParser::Argument_listContext>(0);
}

tree::TerminalNode* CidlParser::AttributeContext::RIGHT_BRACKET() {
  return getToken(CidlParser::RIGHT_BRACKET, 0);
}


size_t CidlParser::AttributeContext::getRuleIndex() const {
  return CidlParser::RuleAttribute;
}

void CidlParser::AttributeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute(this);
}

void CidlParser::AttributeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute(this);
}

CidlParser::AttributeContext* CidlParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 2, CidlParser::RuleAttribute);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(CidlParser::LEFT_SQUARE_BRACKET);
    setState(73);
    local_type();
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CidlParser::LEFT_BRACKET) {
      setState(74);
      match(CidlParser::LEFT_BRACKET);
      setState(75);
      argument_list();
      setState(76);
      match(CidlParser::RIGHT_BRACKET);
    }
    setState(80);
    match(CidlParser::RIGHT_SQUARE_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attribute_listContext ------------------------------------------------------------------

CidlParser::Attribute_listContext::Attribute_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CidlParser::AttributeContext *> CidlParser::Attribute_listContext::attribute() {
  return getRuleContexts<CidlParser::AttributeContext>();
}

CidlParser::AttributeContext* CidlParser::Attribute_listContext::attribute(size_t i) {
  return getRuleContext<CidlParser::AttributeContext>(i);
}


size_t CidlParser::Attribute_listContext::getRuleIndex() const {
  return CidlParser::RuleAttribute_list;
}

void CidlParser::Attribute_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute_list(this);
}

void CidlParser::Attribute_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute_list(this);
}

CidlParser::Attribute_listContext* CidlParser::attribute_list() {
  Attribute_listContext *_localctx = _tracker.createInstance<Attribute_listContext>(_ctx, getState());
  enterRule(_localctx, 4, CidlParser::RuleAttribute_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    attribute();
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CidlParser::LEFT_SQUARE_BRACKET) {
      setState(83);
      attribute();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InterfaceDefinitionContext ------------------------------------------------------------------

CidlParser::InterfaceDefinitionContext::InterfaceDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CidlParser::Attribute_listContext* CidlParser::InterfaceDefinitionContext::attribute_list() {
  return getRuleContext<CidlParser::Attribute_listContext>(0);
}

tree::TerminalNode* CidlParser::InterfaceDefinitionContext::ID_INTERFACE() {
  return getToken(CidlParser::ID_INTERFACE, 0);
}

CidlParser::Local_typeContext* CidlParser::InterfaceDefinitionContext::local_type() {
  return getRuleContext<CidlParser::Local_typeContext>(0);
}

tree::TerminalNode* CidlParser::InterfaceDefinitionContext::LCURLY() {
  return getToken(CidlParser::LCURLY, 0);
}

tree::TerminalNode* CidlParser::InterfaceDefinitionContext::RCURLY() {
  return getToken(CidlParser::RCURLY, 0);
}

CidlParser::InterfaceInheritanceListContext* CidlParser::InterfaceDefinitionContext::interfaceInheritanceList() {
  return getRuleContext<CidlParser::InterfaceInheritanceListContext>(0);
}

std::vector<CidlParser::MethodContext *> CidlParser::InterfaceDefinitionContext::method() {
  return getRuleContexts<CidlParser::MethodContext>();
}

CidlParser::MethodContext* CidlParser::InterfaceDefinitionContext::method(size_t i) {
  return getRuleContext<CidlParser::MethodContext>(i);
}


size_t CidlParser::InterfaceDefinitionContext::getRuleIndex() const {
  return CidlParser::RuleInterfaceDefinition;
}

void CidlParser::InterfaceDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInterfaceDefinition(this);
}

void CidlParser::InterfaceDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInterfaceDefinition(this);
}

CidlParser::InterfaceDefinitionContext* CidlParser::interfaceDefinition() {
  InterfaceDefinitionContext *_localctx = _tracker.createInstance<InterfaceDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 6, CidlParser::RuleInterfaceDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    attribute_list();
    setState(90);
    match(CidlParser::ID_INTERFACE);
    setState(91);
    local_type();
    setState(93);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CidlParser::COLON) {
      setState(92);
      interfaceInheritanceList();
    }
    setState(95);
    match(CidlParser::LCURLY);
    setState(97); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(96);
      method();
      setState(99); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 137439485888) != 0);
    setState(101);
    match(CidlParser::RCURLY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructFieldContext ------------------------------------------------------------------

CidlParser::StructFieldContext::StructFieldContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CidlParser::Local_or_imported_typeContext* CidlParser::StructFieldContext::local_or_imported_type() {
  return getRuleContext<CidlParser::Local_or_imported_typeContext>(0);
}

CidlParser::Local_typeContext* CidlParser::StructFieldContext::local_type() {
  return getRuleContext<CidlParser::Local_typeContext>(0);
}

tree::TerminalNode* CidlParser::StructFieldContext::SEMICOLON() {
  return getToken(CidlParser::SEMICOLON, 0);
}


size_t CidlParser::StructFieldContext::getRuleIndex() const {
  return CidlParser::RuleStructField;
}

void CidlParser::StructFieldContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStructField(this);
}

void CidlParser::StructFieldContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStructField(this);
}

CidlParser::StructFieldContext* CidlParser::structField() {
  StructFieldContext *_localctx = _tracker.createInstance<StructFieldContext>(_ctx, getState());
  enterRule(_localctx, 8, CidlParser::RuleStructField);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    local_or_imported_type();
    setState(104);
    local_type();
    setState(105);
    match(CidlParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructDefinitionContext ------------------------------------------------------------------

CidlParser::StructDefinitionContext::StructDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CidlParser::StructDefinitionContext::ID_STRUCT() {
  return getToken(CidlParser::ID_STRUCT, 0);
}

CidlParser::Local_typeContext* CidlParser::StructDefinitionContext::local_type() {
  return getRuleContext<CidlParser::Local_typeContext>(0);
}

tree::TerminalNode* CidlParser::StructDefinitionContext::LCURLY() {
  return getToken(CidlParser::LCURLY, 0);
}

tree::TerminalNode* CidlParser::StructDefinitionContext::RCURLY() {
  return getToken(CidlParser::RCURLY, 0);
}

std::vector<CidlParser::StructFieldContext *> CidlParser::StructDefinitionContext::structField() {
  return getRuleContexts<CidlParser::StructFieldContext>();
}

CidlParser::StructFieldContext* CidlParser::StructDefinitionContext::structField(size_t i) {
  return getRuleContext<CidlParser::StructFieldContext>(i);
}


size_t CidlParser::StructDefinitionContext::getRuleIndex() const {
  return CidlParser::RuleStructDefinition;
}

void CidlParser::StructDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStructDefinition(this);
}

void CidlParser::StructDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStructDefinition(this);
}

CidlParser::StructDefinitionContext* CidlParser::structDefinition() {
  StructDefinitionContext *_localctx = _tracker.createInstance<StructDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 10, CidlParser::RuleStructDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(CidlParser::ID_STRUCT);
    setState(108);
    local_type();
    setState(109);
    match(CidlParser::LCURLY);
    setState(111); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(110);
      structField();
      setState(113); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 137439485888) != 0);
    setState(115);
    match(CidlParser::RCURLY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnumDefinitionContext ------------------------------------------------------------------

CidlParser::EnumDefinitionContext::EnumDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CidlParser::EnumDefinitionContext::ID_ENUM() {
  return getToken(CidlParser::ID_ENUM, 0);
}

CidlParser::Local_typeContext* CidlParser::EnumDefinitionContext::local_type() {
  return getRuleContext<CidlParser::Local_typeContext>(0);
}

tree::TerminalNode* CidlParser::EnumDefinitionContext::LCURLY() {
  return getToken(CidlParser::LCURLY, 0);
}

std::vector<CidlParser::EnumFieldContext *> CidlParser::EnumDefinitionContext::enumField() {
  return getRuleContexts<CidlParser::EnumFieldContext>();
}

CidlParser::EnumFieldContext* CidlParser::EnumDefinitionContext::enumField(size_t i) {
  return getRuleContext<CidlParser::EnumFieldContext>(i);
}

tree::TerminalNode* CidlParser::EnumDefinitionContext::RCURLY() {
  return getToken(CidlParser::RCURLY, 0);
}

tree::TerminalNode* CidlParser::EnumDefinitionContext::COLON() {
  return getToken(CidlParser::COLON, 0);
}

CidlParser::Integer_primitiveContext* CidlParser::EnumDefinitionContext::integer_primitive() {
  return getRuleContext<CidlParser::Integer_primitiveContext>(0);
}


size_t CidlParser::EnumDefinitionContext::getRuleIndex() const {
  return CidlParser::RuleEnumDefinition;
}

void CidlParser::EnumDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnumDefinition(this);
}

void CidlParser::EnumDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnumDefinition(this);
}

CidlParser::EnumDefinitionContext* CidlParser::enumDefinition() {
  EnumDefinitionContext *_localctx = _tracker.createInstance<EnumDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 12, CidlParser::RuleEnumDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(CidlParser::ID_ENUM);
    setState(118);
    local_type();
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CidlParser::COLON) {
      setState(119);
      match(CidlParser::COLON);
      setState(120);
      integer_primitive();
    }
    setState(123);
    match(CidlParser::LCURLY);
    setState(124);
    enumField();
    setState(129);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CidlParser::T__0) {
      setState(125);
      match(CidlParser::T__0);
      setState(126);
      enumField();
      setState(131);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(132);
    match(CidlParser::RCURLY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Local_typeContext ------------------------------------------------------------------

CidlParser::Local_typeContext::Local_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CidlParser::PrimitiveContext* CidlParser::Local_typeContext::primitive() {
  return getRuleContext<CidlParser::PrimitiveContext>(0);
}

tree::TerminalNode* CidlParser::Local_typeContext::ID() {
  return getToken(CidlParser::ID, 0);
}


size_t CidlParser::Local_typeContext::getRuleIndex() const {
  return CidlParser::RuleLocal_type;
}

void CidlParser::Local_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocal_type(this);
}

void CidlParser::Local_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocal_type(this);
}

CidlParser::Local_typeContext* CidlParser::local_type() {
  Local_typeContext *_localctx = _tracker.createInstance<Local_typeContext>(_ctx, getState());
  enterRule(_localctx, 14, CidlParser::RuleLocal_type);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(136);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CidlParser::T__5:
      case CidlParser::T__6:
      case CidlParser::T__7:
      case CidlParser::T__8:
      case CidlParser::T__9:
      case CidlParser::T__10:
      case CidlParser::T__11:
      case CidlParser::ID_INTEGER_PRIMITIVE: {
        enterOuterAlt(_localctx, 1);
        setState(134);
        primitive();
        break;
      }

      case CidlParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(135);
        match(CidlParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Imported_type_moduleContext ------------------------------------------------------------------

CidlParser::Imported_type_moduleContext::Imported_type_moduleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CidlParser::Imported_type_moduleContext::ID() {
  return getTokens(CidlParser::ID);
}

tree::TerminalNode* CidlParser::Imported_type_moduleContext::ID(size_t i) {
  return getToken(CidlParser::ID, i);
}


size_t CidlParser::Imported_type_moduleContext::getRuleIndex() const {
  return CidlParser::RuleImported_type_module;
}

void CidlParser::Imported_type_moduleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImported_type_module(this);
}

void CidlParser::Imported_type_moduleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CidlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImported_type_module(this);
}
